<resources>
    <string name="app_name">Traxx</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_media_owner">Media Owner</string>
    <string name="prompt_brand">Brand or Advertiser</string>
    <string name="prompt_town">Town</string>
    <string name="take_photo">Take Photo</string>
    <string name="log_out">Log Out</string>
    <string name="view_map">View on Map</string>
    <string name="powered_by_debech">www.geoverifi.com</string>
    <string name="prompt_size">Media Size</string>
    <string name="prompt_run_up">Run Up</string>
    <string name="prompt_material_type">Material Type</string>
    <string name="prompt_illumination">Illumination</string>
    <string name="prompt_visibility">Visibility</string>
    <string name="prompt_angle">Angle</string>
    <string name="prompt_trafficquantinty">Traffic Quantity</string>
    <string name="prompt_trafficspeed">Traffic Speed</string>
    <string name="prompt_structure">Structure</string>
    <string name="prompt_other_comments">Other Comments</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_about_me">About Me</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="prompt_current_password">Current Password</string>
    <string name="edit">Edit</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_width">Width</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="view_in_map">View In Map</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_submission">Submission</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="waiting">Offline Submissions</string>
    <string name="waitings">Offline auditing Submissions</string>
    <string name="register">Dont have an account? Register</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="action_upload">Upload</string>
    <string name="action_stop">STOP</string>
    <string name="not_connected">You are not connected to the internet</string>
    <string name="cannot_go_back">Cannot go back. Upload in progress</string>
    <string name="site_reference_number">Site Reference Number</string>

    <string name="account_name">Geoverifi</string>
    <string name="account_type">com.geoverifi.geoverifi</string>
    <string name="account">Traxx</string>

    <string name="provider_name">com.geoverifi.geoverifi.provider</string>
    <string name="title_activity_monitoring_submission_photos">MonitoringSubmissionPhotosActivity
    </string>
    <string name="title_activity_monitoring_submission_review">MonitoringSubmissionReviewActivity
    </string>
    <string name="err_town">Town cannot be empty</string>
    <string name="err_county">County cannot be empty</string>
    <string name="err_media_owner">Please select Media Owner. If not known, pick \"Unknown\"</string>
    <string name="err_brand_advertiser">Please enter the Brand. If empty, type \"Blank\"</string>
    <string name="prompt_latitude">Latitude</string>
    <string name="prompt_longitude">Longitude</string>
    <string name="agreetopolicy">Accept terms and conditions using Traxx</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>
