<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/view_in_map"
        android:title="@string/view_in_map"
        app:showAsAction="never"
        android:icon="@drawable/ic_map"/>

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never"
        android:icon="@drawable/ic_refresh"/>
</menu>