<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geoverifi.geoverifi.MonitoringDataSubmission">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_date"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_date" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/site_reference_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:hint="@string/site_reference_number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_advertiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_brand_advertiser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/prompt_brand" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_media_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_media_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/prompt_media_owner" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_town"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/prompt_town" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_structure"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_structure"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_size"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_size"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/other_h_w"
                        android:visibility="gone"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/colorPrimaryText"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_material_type"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_material_type"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_run_up"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_run_up"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_illumination"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_illumination"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_visibility"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_visibility"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/prompt_angle"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:id="@+id/media_angle"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_other_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_other_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_other_comments" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorIcons"
                android:text="Continue"
                android:drawableRight="@drawable/ic_right_arrow"
                android:paddingRight="8dp"
                />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/media_owner_hidden"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
