<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="Submitted By:"/>
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/submitted_by"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/prompt_media_owner"/>
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/media_owner"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/prompt_structure"/>
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/media_structure"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/prompt_size"/>
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/media_size"
        android:layout_height="wrap_content" />
</LinearLayout>