<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/enter_data_layout"
    tools:context="com.geoverifi.geoverifi.DataSubmissionActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_date"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_date" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_calendar"
                android:background="@color/colorAccent"
                android:id="@+id/pick_date"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/site_reference_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:hint="@string/site_reference_number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_advertiser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_brand_advertiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/prompt_brand" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_media_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/input_media_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/prompt_media_owner" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_structure"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_structure"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/prompt_town" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_size"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_size"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/other_h_w"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_material_type"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_material_type"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_run_up"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_run_up"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_illumination"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_illumination"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_visibility"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_visibility"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/prompt_angle"/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/media_angle"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_other_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_other_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_other_comments" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_no_image"
                android:background="@drawable/border"
                android:id="@+id/img_photo_1"/>

            <Button
                android:id="@+id/btn_upload_photo_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_photo_camera"
                android:drawablePadding="8dp"
                android:layout_toRightOf="@id/img_photo_1"
                android:paddingLeft="8dip"
                android:background="@color/colorAccent"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:layout_marginLeft="8dp"
                android:text="Upload Photo 1"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:background="@drawable/border"
                android:src="@drawable/ic_no_image"
                android:id="@+id/img_photo_2"/>

            <Button
                android:id="@+id/btn_upload_photo_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_photo_2"
                android:background="@color/colorAccent"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:layout_marginLeft="8dp"
                android:text="Upload Photo 2"
                android:drawableLeft="@drawable/ic_photo_camera"
                android:paddingLeft="8dip"/>
        </RelativeLayout>

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:id="@+id/submit_button"
            android:text="Submit Data"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_owner_hidden"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo1path"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo2path"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>